# rb1_shelf_tools

./: CMakeLists.txt  package.xml
bt_xml/: approach_and_pick_shelf.xml  approach_shelf.xml  behaviortree_entire.xml  carry_and_discharge_shelf.xml  change_footprint.xml  find_deep_shelf.xml  find_shelf_and_nav.xml  find_shelf_and_publish.xml  find_shelf_and_turn_test.xml  find_station_and_init_local.xml  handler_shelf.xml  localization_test.xml  navigate_to_pose.xml  only_change_footprint.xml  turn.xml
config/: config_approach.yaml  config_behavior.yaml  config_find.yaml  config_find_nav_poses.yaml  config_init_localization.yaml  rviz.rviz
launch/: call_behabior.launch.py  servers.launch.py
src/: approach_shelf_service_server.cpp  bt_ros2_async.cpp  bt_ros2_test.cpp  bt_selector_behavior_tree.cpp  find_nav_points_service_server.cpp  find_shelf_service_server.cpp  init_localization_service_server.cpp  recovery_service_server.cpp  trajectory.cpp  trayectory_generate.cpp
src/plugins/: BT_aligth_shelf_deep.hpp  BT_approach_shelf_service_client.hpp  BT_cancel_nav.hpp  BT_change_footprint.hpp  BT_check_approach.hpp  BT_check_nav.hpp  BT_clear_costmap.hpp  BT_decorator_force_success.hpp  BT_delay_node.hpp  BT_find_nav_points_service_client.hpp  BT_find_shelf_deep_service_client.hpp  BT_find_shelf_service_client.hpp  BT_init_localization_service_client.hpp  BT_localization_init.hpp  BT_nav2_dischargePose.hpp  BT_nav_client.hpp  BT_publish_state_robot.hpp  BT_publish_transform.hpp  BT_publish_transform_back.hpp  BT_shelf_handler.hpp  BT_turn_robot.hpp
